<resources>
    <string name="app_name">Chat</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_phone_number">Confirm Phone Number</string>
    <string name="are_you_sure_phone_number">Are you sure you want to use this phone number?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change">Change</string>
    <string name="phone_number_can_not_be_empty">Phone number can not be empty!</string>
    <string name="resend">Resend</string>
    <string name="too_many_requests">Too many requests! Please try again later!</string>
    <string name="something_went_wrong">Something went wrong! Please try again later!</string>
    <string name="confirmation_code_is_wrong">Confirmation code is wrong!</string>
    <string name="please_enter_your_phone_number">Please enter your phone number.</string>
    <string name="please_enter_the_confirmation_code">Please enter the confirmation code that will be sent to you shortly.</string>
    <string name="name">Name</string>
    <string name="about_me">About Me</string>
    <string name="done">Done</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="you_must_grant_required_permissions">You must grant required permission(s) to perform this operation. If you are seeing this error without seeing the permission box, please try clearing the app data</string>
    <string name="grant">Grant</string>
    <string name="quit">Quit</string>
    <string name="dismiss">Dismiss</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="crop_profile_photo">Crop Profile Photo</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="uploading">Uploading</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="failed">Failed!</string>
    <string name="could_not_connect_to_database">Could not connect to database. Please try again later!</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="type_a_message">Type a message…</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="seen">Seen</string>
    <string name="sending">Sending</string>
    <string name="sent">Sent</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="delete">Delete</string>
    <string name="show_message">Show Message</string>
    <string name="archive">Archive</string>
    <string name="delete_messages">Delete Messages</string>
    <string name="are_you_sure_you_want_to_delete_messages">Are you sure you want to delete messages? This action cannot be undone.</string>
    <string name="messages_could_not_be_deleted">Messages could not be deleted! Please try again later.</string>
    <string name="archive_messages">Archive Messages</string>
    <string name="are_you_sure_you_want_to_archive_messages">Are you sure you want to archive messages?\n(New messages will not be included)</string>
    <string name="messages_could_not_be_arhived">Messages could not be arhived! Please try again later.</string>
    <string name="you_cannot_send_messages_in_the_archive">You cannot send messages in the archive!</string>
    <string name="messages_is_archiving">Messages is archiving</string>
    <string name="s_new_messages">%s New Messages</string>
    <string name="new_message">New Message</string>
    <string name="failed_to_fetch_messages">Failed to fetch messages!</string>
    <string name="this_message_could_not_be_decrypted">This message could not be decrypted!</string>
    <string name="send">Send</string>
    <string name="you_cannot_send_empty_messages">You cannot send empty messages!</string>
    <string name="there_is_already_an_archiving_progress">There is already an archiving progress.</string>
</resources>