<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/altMenuLayout"
    android:background="@drawable/alt_menu_arkaplan"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/mesajiGoruntule"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/show_message"/>
    <TextView
        android:id="@+id/mesajiArsivle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/archive"/>
    <TextView
        android:id="@+id/mesajiSil"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/delete"/>
</LinearLayout>