<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Giris.BilgilerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="100dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilResmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_profil_resmi"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/kamera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_kamera"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/isimET"
            android:layout_width="match_parent"
            android:imeOptions="actionNext"
            android:theme="@style/EditTextThemeDefault"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:inputType="textCapSentences"
            android:hint="@string/name"
            android:maxLength="20"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/isimHata"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/warningColor"
            android:text="@string/name_cannot_be_empty"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/hakkimdaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:imeOptions="actionDone"
            android:theme="@style/EditTextThemeDefault"
            android:textSize="20sp"
            android:inputType="textCapSentences"
            android:hint="@string/about_me"
            android:maxLength="100"
            android:maxLines="5"/>
        <Button
            android:id="@+id/bitirBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_15"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/done"/>
    </LinearLayout>

</RelativeLayout>