<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/altMenuLayout"
    android:background="@drawable/alt_menu_arkaplan"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/resimCek"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_kameradan_sec"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:text="@string/camera"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/galeridenSec"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_galeriden_sec"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:text="@string/gallery"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resmiKaldir"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:padding="10dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/ic_kaldir"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:text="@string/remove_photo"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>