<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Giris.GirisActivity">
    <LinearLayout
        android:id="@+id/girisLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:animateLayoutChanges="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/please_enter_your_phone_number"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ulkeKodu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="textStart"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"/>
            <EditText
                android:id="@+id/telefonNumarasi"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/EditTextThemeDefault"
                android:inputType="phone"
                android:textAlignment="center"
                android:maxLength="13"
                android:maxLines="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/bosNumaraUyari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/warningColor"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/phone_number_can_not_be_empty"
            android:visibility="gone"/>
        <Button
            android:id="@+id/girisBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/next"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/onayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="70dp"
        android:paddingStart="70dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:animateLayoutChanges="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/please_enter_the_confirmation_code"/>
        <EditText
            android:id="@+id/onayKodu"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:theme="@style/EditTextThemeDefault"
            android:inputType="number"
            android:textAlignment="center"
            android:hint="555555"
            android:maxLines="1"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/geriSayimText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="@color/warningColor"
            android:text="02:00"
            android:gravity="center"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/onayKoduHata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/warningColor"
            android:gravity="center"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/dogrulamaHataMesaji"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/warningColor"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/phone_number_can_not_be_empty"
            android:visibility="gone"/>
        <Button
            android:id="@+id/tekrarGonderBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/disabledBackground"
            android:textColor="@color/disabledText"
            android:text="@string/resend"/>
        <Button
            android:id="@+id/onayBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/confirm"/>
    </LinearLayout>
</RelativeLayout>